--- a/Install/install.txt
+++ b/Install/install.txt
@@ -39,8 +39,7 @@ IP: 192.168.1.31 mit Alias rpi
 	>> cd /root/ && chmod 0777 *.sh
 	>> cd /root/sh/ && chmod 0777 *.sh
 
-	Neustarten
-	>> reboot
+	Datenbank aus .\Install\Files_to_install\Databases\pi_dbs.sql via phpmyadmin importieren
 
 	Crontab aufbauen
 	>> crontab -e
@@ -49,3 +48,6 @@ IP: 192.168.1.31 mit Alias rpi
 		@reboot /root/sh/m.sh
 		@reboot /root/sh/timecontrol.sh
 		@reboot /root/sh/zsh.sh
+
+	Neustarten
+	>> reboot
