--- a/Install/install.txt
+++ b/Install/install.txt
@@ -41,6 +41,9 @@ IP: 192.168.1.31 mit Alias rpi
 
 	Datenbank aus .\Install\Files_to_install\Databases\pi_dbs.sql via phpmyadmin importieren
 
+	Rechte setzen:
+	>> cd /var/www/html/timecontrol/ && chmod 0755 *.data
+
 	Crontab aufbauen
 	>> crontab -e
 	-->
@@ -51,3 +54,6 @@ IP: 192.168.1.31 mit Alias rpi
 
 	Neustarten
 	>> reboot
+
+
+	FERTIG!!
