--- a/Install/install.txt
+++ b/Install/install.txt
@@ -16,7 +16,7 @@ Diese Datei behandelt nur die Software-Installation. Für die Hardwareverkabelun
 3) LogIn als root über SSH
 	Benötigte und nützliche Software nachinstallieren
 	>> apt update && apt -y upgrade
-	>> apt install pydf screen nano apache2 mariadb-server mariadb-client phpmyadmin git-core mpg123 htop
+	>> apt install pydf screen nano apache2 mariadb-server mariadb-client phpmyadmin git-core mpg123 htop mutt
 
 	PHP7.0 installieren
 	>> nano /etc/apt/sources.list
@@ -46,7 +46,7 @@ Diese Datei behandelt nur die Software-Installation. Für die Hardwareverkabelun
 	Rechte setzen:
 	>> cd /var/www/html/timecontrol/ && chmod 0777 *.data
 
-	PHP sudo-Recthe geben:
+	PHP sudo-Rechte geben:
 	>> visudo
 		Füge am Ende hinzu:
 		-->
